Correct the align into the intro section
This will correct the align between the intro text and the image into the same section in order to become similar to the expected result.

--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -70,12 +70,29 @@ body>*{
 }
 
 .intro-box>*{
-  text-align: center;
-  padding: 10px;
- /* border: 2px solid red;*/
+  margin: 50px 0px;
+ 
+  
+ border: 2px solid red;
+}
+
+.intro-text-box {
+  width: 500px;
+  padding: 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+}
+
+.intro-text-box * {
+  margin: 0px;
+  border: 2px solid yellow;
 }
 
 .intro-text-box h1 {
+  margin-top: 0px;
+  margin-bottom: 20px;
   font-size: 48px;
   font-weight: bolder;
   color: #f9faf8;
@@ -96,6 +113,8 @@ body>*{
 }
 
 .intro-text-box button {
+  margin-top: auto;
+  align-self: center;
   border-radius: 2px;
   color: white;
   background-color: #3882f6;
